--- a/OpenSky.Client/Themes/OpenSkyStyles.xaml
+++ b/OpenSky.Client/Themes/OpenSkyStyles.xaml
@@ -219,6 +219,76 @@
         </Setter>
     </Style>
 
+    <Style x:Key="OpenSkyPageStyle" TargetType="controls:OpenSkyPage">
+        <Style.Resources>
+            <ResourceDictionary>
+                <ResourceDictionary.MergedDictionaries>
+                    <ui:ThemeResources RequestedTheme="Dark">
+                        <ui:ThemeResources.ThemeDictionaries>
+                            <ResourceDictionary x:Key="Dark">
+                                <ResourceDictionary.MergedDictionaries>
+                                    <ui:ColorPaletteResources
+                                        TargetTheme="Dark"
+                                        Accent="#05826c"
+                                        AltHigh="#404040"
+                                        BaseHigh="#FFC9C9C9"/>
+                                </ResourceDictionary.MergedDictionaries>
+                            </ResourceDictionary>
+                        </ui:ThemeResources.ThemeDictionaries>
+                    </ui:ThemeResources>
+                    <ui:XamlControlsResources />
+
+                    <ResourceDictionary Source="VectorGraphics.xaml" />
+                    <ResourceDictionary Source="OpenSkyStyles.xaml" />
+                    <ResourceDictionary Source="GridFilter.xaml" />
+                </ResourceDictionary.MergedDictionaries>
+            </ResourceDictionary>
+        </Style.Resources>
+        <Setter Property="ui:ThemeManager.IsThemeAware" Value="True" />
+        <Setter Property="FontFamily" Value="/Fonts/#Montserrat" />
+        <Setter Property="FontSize" Value="13" />
+        <Setter Property="Foreground" Value="#c2c2c2" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="UserControl">
+                    <Grid>
+                        <ScrollViewer x:Name="ScrollViewer" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+                            <ContentPresenter
+                                x:Name="ContentPresenter"
+                                SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
+                        </ScrollViewer>
+                        <Border x:Name="LoadingOverlay" Background="#B0000000" Visibility="Collapsed">
+                            <StackPanel Orientation="Vertical" VerticalAlignment="Center">
+                                <ui:ProgressRing IsActive="True" Width="100" Height="100"></ui:ProgressRing>
+                                <TextBlock HorizontalAlignment="Center" FontSize="25" Margin="0,10,0,0" Text="{TemplateBinding controls:OpenSkyPage.LoadingText}" />
+                            </StackPanel>
+                        </Border>
+                    </Grid>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="controls:OpenSkyPage.HorizontalScrollBar" Value="False">
+                            <Setter TargetName="ScrollViewer" Property="HorizontalScrollBarVisibility" Value="Disabled" />
+                        </Trigger>
+                        <Trigger Property="controls:OpenSkyPage.HorizontalScrollBar" Value="True">
+                            <Setter TargetName="ScrollViewer" Property="HorizontalScrollBarVisibility" Value="Auto" />
+                        </Trigger>
+                        <Trigger Property="controls:OpenSkyPage.VerticalScrollBar" Value="False">
+                            <Setter TargetName="ScrollViewer" Property="VerticalScrollBarVisibility" Value="Disabled" />
+                        </Trigger>
+                        <Trigger Property="controls:OpenSkyPage.VerticalScrollBar" Value="True">
+                            <Setter TargetName="ScrollViewer" Property="VerticalScrollBarVisibility" Value="Auto" />
+                        </Trigger>
+                        <Trigger Property="controls:OpenSkyPage.ShowLoading" Value="True">
+                            <Setter TargetName="LoadingOverlay" Property="Visibility" Value="Visible" />
+                        </Trigger>
+                        <Trigger Property="controls:OpenSkyPage.ShowLoading" Value="False">
+                            <Setter TargetName="LoadingOverlay" Property="Visibility" Value="Collapsed" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
     <Style x:Key="OpenSkyWindowStyle" TargetType="controls:OpenSkyWindow">
         <Style.Resources>
             <Storyboard x:Key="Rotate">
@@ -292,7 +362,7 @@
                                 <TextBlock HorizontalAlignment="Center" FontSize="25" Margin="0,10,0,0" Text="{TemplateBinding controls:OpenSkyWindow.LoadingText}" />
                             </StackPanel>
                         </Border>
-                        
+
                         <Grid Grid.Row="0" Grid.RowSpan="2" x:Name="resizeGrid">
                             <Rectangle Stroke="{x:Null}" Fill="Transparent" VerticalAlignment="Top" Height="5" Margin="5,0,5,0" x:Name="top" />
                             <Rectangle Stroke="{x:Null}" Fill="Transparent" VerticalAlignment="Bottom" Height="5" Margin="5,0,5,0" x:Name="bottom" />
@@ -353,14 +423,14 @@
             <Setter.Value>
                 <ControlTemplate TargetType="GroupBox">
                     <Border Background="{TemplateBinding Background}" CornerRadius="2">
-                    <Grid SnapsToDevicePixels="true">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="*" />
-                        </Grid.RowDefinitions>
-                        <Border Grid.Row="0" Grid.RowSpan="2" Margin="0,10,0,0" BorderThickness="1" BorderBrush="#666666" CornerRadius="1.5" />
-                        <Border Grid.Row="0" Background="{StaticResource OpenSkyGroupboxBackgroundBrush}" HorizontalAlignment="Left" Margin="10,0,0,0" Padding="3,0">
-                            <ContentPresenter
+                        <Grid SnapsToDevicePixels="true">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="*" />
+                            </Grid.RowDefinitions>
+                            <Border Grid.Row="0" Grid.RowSpan="2" Margin="0,10,0,0" BorderThickness="1" BorderBrush="#666666" CornerRadius="1.5" />
+                            <Border Grid.Row="0" Background="{StaticResource OpenSkyGroupboxBackgroundBrush}" HorizontalAlignment="Left" Margin="10,0,0,0" Padding="3,0">
+                                <ContentPresenter
                                 x:Name="HeaderPresenter"
                                 TextElement.FontSize="8"
                                 TextElement.FontWeight="SemiBold"
@@ -368,12 +438,12 @@
                                 ContentSource="Header"
                                 RecognizesAccessKey="True"
                                 SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
-                        </Border>
-                        <ContentPresenter
+                            </Border>
+                            <ContentPresenter
                             Grid.Row="1"
                             Margin="5"
                             SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
-                    </Grid>
+                        </Grid>
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
