--- a/OpenSky.Client/Pages/WorldPopulation.xaml
+++ b/OpenSky.Client/Pages/WorldPopulation.xaml
@@ -23,6 +23,11 @@
         </Grid.ColumnDefinitions>
         <ui:CommandBar Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" HorizontalContentAlignment="Left">
             <ui:AppBarButton Icon="Refresh" Label="Refresh" ToolTip="Refresh the view [F5]" Command="{Binding RefreshViewCommand}" />
+            <ui:AppBarButton Label="Populate selected failed" ToolTip="Populate the currently selected failed airport" Command="{Binding PopulateSelectedFailedCommand}">
+                <ui:AppBarButton.Icon>
+                    <ui:FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE709;" />
+                </ui:AppBarButton.Icon>
+            </ui:AppBarButton>
         </ui:CommandBar>
         <StackPanel Grid.Row="1" Grid.Column="0" Orientation="Vertical" Grid.IsSharedSizeScope="True" Margin="5,0,20,0">
             <GroupBox Height="300" Margin="5">
@@ -247,6 +252,7 @@
                     <DataGrid 
                         x:Name="FailedGrid" Margin="5"
                         ItemsSource="{Binding FailedAirports}"
+                        SelectedItem="{Binding SelectedFailedAirport, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                         AutoGenerateColumns="False" CanUserAddRows="False" CanUserDeleteRows="False" IsReadOnly="True" SelectionMode="Single" SelectionUnit="FullRow"
                         HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" MinColumnWidth="120" HeadersVisibility="Column"
                         ColumnHeaderStyle="{StaticResource FilteredDataGridColumnHeaderStyle}" CellStyle="{StaticResource FullRowSelectDataGridCellStyle}">
